--- a/src/components/ImageGenerator/ImageGenerator.css
+++ b/src/components/ImageGenerator/ImageGenerator.css
@@ -1,6 +1,6 @@
 ai-image-generator{
     display:flex;
-    flex-directions:column;
+    flex-direction:column;
     margin: auto;
     align-items: center;
     margin-top:80px;
