--- a/src/components/ImageGenerator/ImageGenerator.css
+++ b/src/components/ImageGenerator/ImageGenerator.css
@@ -59,5 +59,25 @@
     border-radius: 50px;
     background: #de1889;
     cursor: pointer;
-    
+
+}
+
+.loading-bar{
+    width: 0px;
+    height:8px;
+    background: #de1889;
+}
+
+.loading-text{
+    font-size: 18px;
+}
+
+.loading-bar-full{
+    width: 512px;
+    height:8px;
+    background: #de1889;
+    transition: 15s;
+}
+.display-none{
+    display:none;
 }
