--- a/src/components/ImageGenerator/ImageGenerator.css
+++ b/src/components/ImageGenerator/ImageGenerator.css
@@ -27,7 +27,6 @@ body{
     font-weight:600;
 }
 .img-loading{
-    
     justify-content: center;
 }
 .img-loading img{
@@ -37,37 +36,40 @@ body{
 }
 
 .search-box{
-    display:inline-block;
-    width: 1000px;
-    height:80px;
-    justify-content: space-around;
-    align-items: center;
-    border-radius: 50px;
-    background: #1f3540;
+    display:flex;
+    height: auto;
+    width: 50%;
+    justify-content: center;
+
 }
 
 .search-input{
-    width: 600px;
-    height:50px;
-    background: transparent;
-    border:none;
-    outline:none;
-    font-size: 18px;
-    color: white;
-    padding-left:35px;
-    margin-right:35px;
+    width: 100%;
+    height: 50px;
+    padding: 0 20px;
+    font-size: 20px;
+    border-radius: 50px;
+    border: none;
+    outline: none;
+    background: #1f1f1f;
+    color: #fff;
+    transition: 0.3s;
+    margin-right: 20px;
+    
 }
 
 .search-input::placeholder{
     color: #999;
+
 }
 
 .generate-btn{
+    margin-top: 40px;
     display:flex;
-    align-items:center;
+    align-items: center;
     justify-content: center;
-    width:300px;
-    height: 85px;
+    width:230px;
+    height: 90px;
     font-size: 20px;
     border-radius: 50px;
     background: #de1889;
